--- a/style.css
+++ b/style.css
@@ -13,14 +13,138 @@
 :root {
   --moderate-violet: hsl(263, 55%, 52%);
   --dark-grayish-blue: hsl(217, 19%, 35%);
+  --dark-grayish-blue-transparent: hsl(217, 19%, 35%, 50%);
+  --dark-grayish-blue-opaque: hsl(217, 19%, 35%, 70%);
   --blackish-blue: hsl(219, 29%, 14%);
   --white: hsl(0, 0%, 100%);
   --light-gray: hsl(0, 0%, 81%);
   --light-grayish-blue: hsl(210, 46%, 95%);
+  --light-grayish-blue-transparent: hsl(210, 46%, 95%, 50%);
+  --light-grayish-blue-opaque: hsl(210, 46%, 95%, 70%);
   --medium: 500;
   --semibold: 600;
 }
 
 html {
   font-size: 13px;
+  width: 100%;
+  height: 100%
+}
+
+body {
+  display: grid;
+  place-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: var(--light-gray);
+  font-family: Barlow;
+}
+
+main {
+  display: grid;
+  place-items: center;
+  row-gap: 2rem;
+  width: 100%;
+  height: 100%;
+  padding: 2rem;
+}
+
+.card {
+  border-radius: 1rem;
+  padding-left: 3rem;
+  padding-right: 2.3rem;
+  padding-top: 2.5rem;
+  padding-bottom: 3rem;
+  display: grid;
+  grid-template-areas:
+    "user ."
+    "statement statement"
+    "review review";
+  row-gap: 1.5rem;
+}
+
+.violet {
+  background-color: var(--moderate-violet);
+}
+
+.dark-grayish-blue {
+  background-color: var(--dark-grayish-blue);
+}
+
+.white {
+  background-color: var(--white);
+  color: var(--dark-grayish-blue);
+
+  .name {
+    color: var(--dark-grayish-blue);
+  }
+
+  .title {
+    color: var(--dark-grayish-blue-transparent);
+  }
+
+  .statement {
+    color: var(--dark-grayish-blue);
+  }
+
+  .review {
+    color: var(--dark-grayish-blue-opaque);
+  }
+}
+
+.blackish-blue {
+  background-color: var(--blackish-blue);
+}
+
+.statement {
+  grid-area: statement;
+  color: var(--white);
+  font-size: 1.6rem;
+  font-weight: var(--medium);
+  line-height: 2.4rem;
+  font-weight: var(--semibold);
+}
+
+.review {
+  grid-area: review;
+  color: var(--light-grayish-blue-opaque);
+  font-size: 1.2rem;
+  line-height: 1.8rem;
+}
+
+.avatar {
+  grid-area: user;
+  display: grid;
+  grid-template-areas:
+    "img name"
+    "img title";
+  column-gap: 1.4rem;
+}
+
+.background-image {
+  background-image: url("./assets/images/bg-pattern-quotation.svg");
+  background-repeat: no-repeat;
+  background-position: 90% 0%;
+  background-size: 10.5em;
+}
+
+img {
+  border-radius: 50%;
+  border: 2px solid var(--light-grayish-blue-transparent);
+  grid-area: img;
+  place-self: center;
+  width: 40px;
+  height: 40px;
+}
+
+.name {
+  font-size: 1.2rem;
+  color: var(--white);
+  grid-area: name;
+}
+
+.title {
+  font-size: 1.1rem;
+  grid-area: title;
+  color: var(--light-grayish-blue-transparent);
 }
