--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
   place-items: center;
   width: 100%;
   height: 100%;
-  background-color: var(--light-gray);
+  background-color: var(--light-grayish-blue);
   font-family: Barlow;
 }
 
