--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@
   --light-grayish-blue: hsl(210, 46%, 95%);
   --light-grayish-blue-transparent: hsl(210, 46%, 95%, 50%);
   --light-grayish-blue-opaque: hsl(210, 46%, 95%, 70%);
-  --medium: 500;
   --semibold: 600;
+  --image-size: 36px;
 }
 
 html {
@@ -42,25 +42,31 @@ body {
 
 main {
   display: grid;
-  place-items: center;
   row-gap: 2rem;
   width: 100%;
   height: 100%;
   padding: 2rem;
 }
 
+/* section.testimonials {} */
+
+img {
+  border-radius: 50%;
+  border: 2px solid var(--light-grayish-blue-transparent);
+  width: var(--image-size);
+  height: var(--image-size);
+  grid-column: 1;
+  grid-row: 1 / 3;
+  place-self: center;
+}
+
 .card {
   border-radius: 1rem;
-  padding-left: 3rem;
-  padding-right: 2.3rem;
-  padding-top: 2.5rem;
-  padding-bottom: 3rem;
+  padding: 2.6rem;
+  padding-top: 2rem;
   display: grid;
-  grid-template-areas:
-    "user"
-    "statement"
-    "review";
-  row-gap: 1.3rem;
+  justify-content: space-evenly;
+  row-gap: 1rem;
 }
 
 .violet {
@@ -97,58 +103,38 @@ main {
 }
 
 .statement {
-  grid-area: statement;
   color: var(--white);
-  font-size: 1.8rem;
-  font-weight: var(--medium);
-  line-height: 2.3rem;
+  font-size: 1.5rem;
   font-weight: var(--semibold);
+  line-height: 1.3;
 }
 
 .review {
-  grid-area: review;
+  line-height: 1.4;
   color: var(--light-grayish-blue-opaque);
-  font-size: 1.3rem;
-  line-height: 1.8rem;
 }
 
 .avatar {
-  grid-area: user;
   display: grid;
-  grid-template-areas:
-    "img name"
-    "img title";
+  grid-template-columns: var(--image-size) 1fr;
+  grid-template-rows: repeat(2, 1fr);
   column-gap: 1.4rem;
+  grid-auto-flow: column;
   justify-content: start;
 }
 
 .background-image {
   background-image: url("./assets/images/bg-pattern-quotation.svg");
   background-repeat: no-repeat;
-  background-position: 80% 0%;
-  background-size: 10em;
-}
-
-img {
-  border-radius: 50%;
-  border: 2px solid var(--light-grayish-blue-transparent);
-  grid-area: img;
-  align-self: center;
-  width: 40px;
-  height: 40px;
+  background-position: 90% 0%;
+  background-size: 110px;
 }
 
 .name {
-  font-size: 1.3rem;
   color: var(--white);
-  grid-area: name;
-  align-self: end;
-  justify-self: start;
 }
 
 .title {
-  font-size: 1.2rem;
-  grid-area: title;
   color: var(--light-grayish-blue-transparent);
 }
 
@@ -192,7 +178,6 @@ img {
     grid-area: spot-5;
     max-height: 28rem;
   }
-
 
   .background-image {
     background-position: 85% 0%;
